[tool.poetry]
name = "bilibili-video-download"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bilibili_video_download"}]


[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
requests = "^2.26.0"
moviepy = "0.2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
